--- a/Resources/ETL_Mini_Project_Starter_CodeKSiegler.ipynb
+++ b/Resources/ETL_Mini_Project_Starter_CodeKSiegler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -258,212 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['cf_id', 'contact_id', 'company_name', 'blurb', 'goal', 'pledged',\n",
-       "       'outcome', 'backers_count', 'country', 'currency', 'launched_at',\n",
-       "       'deadline', 'staff_pick', 'spotlight', 'category & sub-category'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the crowdfunding_info_df columns.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cf_id</th>\n",
-       "      <th>contact_id</th>\n",
-       "      <th>company_name</th>\n",
-       "      <th>blurb</th>\n",
-       "      <th>goal</th>\n",
-       "      <th>pledged</th>\n",
-       "      <th>outcome</th>\n",
-       "      <th>backers_count</th>\n",
-       "      <th>country</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>launched_at</th>\n",
-       "      <th>deadline</th>\n",
-       "      <th>staff_pick</th>\n",
-       "      <th>spotlight</th>\n",
-       "      <th>category &amp; sub-category</th>\n",
-       "      <th>category</th>\n",
-       "      <th>subcategory</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>147</td>\n",
-       "      <td>4661</td>\n",
-       "      <td>Baldwin, Riley and Jackson</td>\n",
-       "      <td>Pre-emptive tertiary standardization</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CAD</td>\n",
-       "      <td>1581573600</td>\n",
-       "      <td>1614578400</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>food/food trucks</td>\n",
-       "      <td>food</td>\n",
-       "      <td>food trucks</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1621</td>\n",
-       "      <td>3765</td>\n",
-       "      <td>Odom Inc</td>\n",
-       "      <td>Managed bottom-line architecture</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>14560</td>\n",
-       "      <td>successful</td>\n",
-       "      <td>158</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1611554400</td>\n",
-       "      <td>1621918800</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>music/rock</td>\n",
-       "      <td>music</td>\n",
-       "      <td>rock</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1812</td>\n",
-       "      <td>4187</td>\n",
-       "      <td>Melton, Robinson and Fritz</td>\n",
-       "      <td>Function-based leadingedge pricing structure</td>\n",
-       "      <td>108400</td>\n",
-       "      <td>142523</td>\n",
-       "      <td>successful</td>\n",
-       "      <td>1425</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>AUD</td>\n",
-       "      <td>1608184800</td>\n",
-       "      <td>1640844000</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>technology/web</td>\n",
-       "      <td>technology</td>\n",
-       "      <td>web</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2156</td>\n",
-       "      <td>4941</td>\n",
-       "      <td>Mcdonald, Gonzalez and Ross</td>\n",
-       "      <td>Vision-oriented fresh-thinking conglomeration</td>\n",
-       "      <td>4200</td>\n",
-       "      <td>2477</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>24</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1634792400</td>\n",
-       "      <td>1642399200</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>music/rock</td>\n",
-       "      <td>music</td>\n",
-       "      <td>rock</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1365</td>\n",
-       "      <td>2199</td>\n",
-       "      <td>Larson-Little</td>\n",
-       "      <td>Proactive foreground core</td>\n",
-       "      <td>7600</td>\n",
-       "      <td>5265</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>53</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>1608530400</td>\n",
-       "      <td>1629694800</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>theater/plays</td>\n",
-       "      <td>theater</td>\n",
-       "      <td>plays</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   cf_id  contact_id                 company_name  \\\n",
-       "0    147        4661   Baldwin, Riley and Jackson   \n",
-       "1   1621        3765                     Odom Inc   \n",
-       "2   1812        4187   Melton, Robinson and Fritz   \n",
-       "3   2156        4941  Mcdonald, Gonzalez and Ross   \n",
-       "4   1365        2199                Larson-Little   \n",
-       "\n",
-       "                                           blurb    goal  pledged     outcome  \\\n",
-       "0           Pre-emptive tertiary standardization     100        0      failed   \n",
-       "1               Managed bottom-line architecture    1400    14560  successful   \n",
-       "2   Function-based leadingedge pricing structure  108400   142523  successful   \n",
-       "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
-       "4                      Proactive foreground core    7600     5265      failed   \n",
-       "\n",
-       "   backers_count country currency  launched_at    deadline  staff_pick  \\\n",
-       "0              0      CA      CAD   1581573600  1614578400       False   \n",
-       "1            158      US      USD   1611554400  1621918800       False   \n",
-       "2           1425      AU      AUD   1608184800  1640844000       False   \n",
-       "3             24      US      USD   1634792400  1642399200       False   \n",
-       "4             53      US      USD   1608530400  1629694800       False   \n",
-       "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
-       "0      False        food/food trucks        food  food trucks  \n",
-       "1       True              music/rock       music         rock  \n",
-       "2      False          technology/web  technology          web  \n",
-       "3      False              music/rock       music         rock  \n",
-       "4      False           theater/plays     theater        plays  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Assign the category and subcategory values to category and subcategory columns.\n",
     "\n",
@@ -472,20 +278,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['food' 'music' 'technology' 'theater' 'film & video' 'publishing' 'games'\n",
-      " 'photography' 'journalism']\n",
-      "['food trucks' 'rock' 'web' 'plays' 'documentary' 'electric music' 'drama'\n",
-      " 'indie rock' 'wearables' 'nonfiction' 'animation' 'video games' 'shorts'\n",
-      " 'fiction' 'photography books' 'radio & podcasts' 'metal' 'jazz'\n",
-      " 'translations' 'television' 'mobile games' 'world music'\n",
-      " 'science fiction' 'audio']\n"
+     "ename": "NameError",
+     "evalue": "name 'categories' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-6506977759e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubcategories\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'categories' is not defined"
      ]
     }
    ],
@@ -910,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +880,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1194,7 @@
        "[1000 rows x 15 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1508,7 @@
        "[1000 rows x 15 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1717,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1545,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1753,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1581,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
