--- a/ETL_Mini_Project_Starter_CodeHWeber.ipynb
+++ b/ETL_Mini_Project_Starter_CodeHWeber.ipynb
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1554,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1628,15 +1628,15 @@
        "      <td>64</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>2021-06-09</td>\n",
-       "      <td>2021-06-18</td>\n",
+       "      <td>1970-01-01 00:00:01.623214800</td>\n",
+       "      <td>1970-01-01 00:00:01.623992400</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>film &amp; video/drama</td>\n",
        "      <td>film &amp; video</td>\n",
        "      <td>drama</td>\n",
        "      <td>cat5</td>\n",
-       "      <td>7</td>\n",
+       "      <td>subcat7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>991</th>\n",
@@ -1650,15 +1650,15 @@
        "      <td>241</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>2020-12-09</td>\n",
-       "      <td>2021-05-26</td>\n",
+       "      <td>1970-01-01 00:00:01.607493600</td>\n",
+       "      <td>1970-01-01 00:00:01.622005200</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/rock</td>\n",
        "      <td>music</td>\n",
        "      <td>rock</td>\n",
        "      <td>cat2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>subcat2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>992</th>\n",
@@ -1672,15 +1672,15 @@
        "      <td>132</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>2020-06-14</td>\n",
-       "      <td>2021-02-09</td>\n",
+       "      <td>1970-01-01 00:00:01.592110800</td>\n",
+       "      <td>1970-01-01 00:00:01.612850400</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>film &amp; video/drama</td>\n",
        "      <td>film &amp; video</td>\n",
        "      <td>drama</td>\n",
        "      <td>cat5</td>\n",
-       "      <td>7</td>\n",
+       "      <td>subcat7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>993</th>\n",
@@ -1694,15 +1694,15 @@
        "      <td>75</td>\n",
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
-       "      <td>2021-07-03</td>\n",
-       "      <td>2021-07-08</td>\n",
+       "      <td>1970-01-01 00:00:01.625288400</td>\n",
+       "      <td>1970-01-01 00:00:01.625720400</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>photography/photography books</td>\n",
        "      <td>photography</td>\n",
        "      <td>photography books</td>\n",
        "      <td>cat8</td>\n",
-       "      <td>15</td>\n",
+       "      <td>subcat15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>994</th>\n",
@@ -1716,15 +1716,15 @@
        "      <td>842</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>2021-11-15</td>\n",
-       "      <td>2021-12-07</td>\n",
+       "      <td>1970-01-01 00:00:01.636956000</td>\n",
+       "      <td>1970-01-01 00:00:01.638856800</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>publishing/translations</td>\n",
        "      <td>publishing</td>\n",
        "      <td>translations</td>\n",
        "      <td>cat6</td>\n",
-       "      <td>19</td>\n",
+       "      <td>subcat19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
@@ -1738,15 +1738,15 @@
        "      <td>2043</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>2020-12-29</td>\n",
-       "      <td>2021-05-30</td>\n",
+       "      <td>1970-01-01 00:00:01.609221600</td>\n",
+       "      <td>1970-01-01 00:00:01.622350800</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>food/food trucks</td>\n",
        "      <td>food</td>\n",
        "      <td>food trucks</td>\n",
        "      <td>cat1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>subcat1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
@@ -1760,15 +1760,15 @@
        "      <td>112</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>2021-10-15</td>\n",
-       "      <td>2021-11-30</td>\n",
+       "      <td>1970-01-01 00:00:01.634274000</td>\n",
+       "      <td>1970-01-01 00:00:01.638252000</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
        "      <td>theater</td>\n",
        "      <td>plays</td>\n",
        "      <td>cat4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>subcat4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
@@ -1782,15 +1782,15 @@
        "      <td>139</td>\n",
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
-       "      <td>2021-11-06</td>\n",
-       "      <td>2021-12-10</td>\n",
+       "      <td>1970-01-01 00:00:01.636174800</td>\n",
+       "      <td>1970-01-01 00:00:01.639116000</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
        "      <td>theater</td>\n",
        "      <td>plays</td>\n",
        "      <td>cat4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>subcat4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
@@ -1804,15 +1804,15 @@
        "      <td>374</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>2020-10-08</td>\n",
-       "      <td>2021-04-11</td>\n",
+       "      <td>1970-01-01 00:00:01.602133200</td>\n",
+       "      <td>1970-01-01 00:00:01.618117200</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/indie rock</td>\n",
        "      <td>music</td>\n",
        "      <td>indie rock</td>\n",
        "      <td>cat2</td>\n",
-       "      <td>8</td>\n",
+       "      <td>subcat8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
@@ -1826,15 +1826,15 @@
        "      <td>1122</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>2020-12-30</td>\n",
-       "      <td>2021-08-18</td>\n",
+       "      <td>1970-01-01 00:00:01.609308000</td>\n",
+       "      <td>1970-01-01 00:00:01.629262800</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>food/food trucks</td>\n",
        "      <td>food</td>\n",
        "      <td>food trucks</td>\n",
        "      <td>cat1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>subcat1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1865,44 +1865,56 @@
        "998      Polarized composite customer loyalty   66600.0   37823.0      failed   \n",
        "999               Expanded eco-centric policy  111100.0   62819.0    canceled   \n",
        "\n",
-       "     backers_count country currency launched_date    end_date  staff_pick  \\\n",
-       "990             64      US      USD    2021-06-09  2021-06-18       False   \n",
-       "991            241      US      USD    2020-12-09  2021-05-26       False   \n",
-       "992            132      US      USD    2020-06-14  2021-02-09       False   \n",
-       "993             75      IT      EUR    2021-07-03  2021-07-08       False   \n",
-       "994            842      US      USD    2021-11-15  2021-12-07       False   \n",
-       "995           2043      US      USD    2020-12-29  2021-05-30       False   \n",
-       "996            112      US      USD    2021-10-15  2021-11-30       False   \n",
-       "997            139      IT      EUR    2021-11-06  2021-12-10       False   \n",
-       "998            374      US      USD    2020-10-08  2021-04-11       False   \n",
-       "999           1122      US      USD    2020-12-30  2021-08-18       False   \n",
+       "     backers_count country currency                 launched_date  \\\n",
+       "990             64      US      USD 1970-01-01 00:00:01.623214800   \n",
+       "991            241      US      USD 1970-01-01 00:00:01.607493600   \n",
+       "992            132      US      USD 1970-01-01 00:00:01.592110800   \n",
+       "993             75      IT      EUR 1970-01-01 00:00:01.625288400   \n",
+       "994            842      US      USD 1970-01-01 00:00:01.636956000   \n",
+       "995           2043      US      USD 1970-01-01 00:00:01.609221600   \n",
+       "996            112      US      USD 1970-01-01 00:00:01.634274000   \n",
+       "997            139      IT      EUR 1970-01-01 00:00:01.636174800   \n",
+       "998            374      US      USD 1970-01-01 00:00:01.602133200   \n",
+       "999           1122      US      USD 1970-01-01 00:00:01.609308000   \n",
        "\n",
-       "     spotlight        category & sub-category      category  \\\n",
-       "990       True             film & video/drama  film & video   \n",
-       "991       True                     music/rock         music   \n",
-       "992       True             film & video/drama  film & video   \n",
-       "993       True  photography/photography books   photography   \n",
-       "994       True        publishing/translations    publishing   \n",
-       "995       True               food/food trucks          food   \n",
-       "996      False                  theater/plays       theater   \n",
-       "997      False                  theater/plays       theater   \n",
-       "998       True               music/indie rock         music   \n",
-       "999      False               food/food trucks          food   \n",
+       "                         end_date  staff_pick  spotlight  \\\n",
+       "990 1970-01-01 00:00:01.623992400       False       True   \n",
+       "991 1970-01-01 00:00:01.622005200       False       True   \n",
+       "992 1970-01-01 00:00:01.612850400       False       True   \n",
+       "993 1970-01-01 00:00:01.625720400       False       True   \n",
+       "994 1970-01-01 00:00:01.638856800       False       True   \n",
+       "995 1970-01-01 00:00:01.622350800       False       True   \n",
+       "996 1970-01-01 00:00:01.638252000       False      False   \n",
+       "997 1970-01-01 00:00:01.639116000       False      False   \n",
+       "998 1970-01-01 00:00:01.618117200       False       True   \n",
+       "999 1970-01-01 00:00:01.629262800       False      False   \n",
        "\n",
-       "           subcategory category_id  subcategory_id  \n",
-       "990              drama        cat5               7  \n",
-       "991               rock        cat2               2  \n",
-       "992              drama        cat5               7  \n",
-       "993  photography books        cat8              15  \n",
-       "994       translations        cat6              19  \n",
-       "995        food trucks        cat1               1  \n",
-       "996              plays        cat4               4  \n",
-       "997              plays        cat4               4  \n",
-       "998         indie rock        cat2               8  \n",
-       "999        food trucks        cat1               1  "
+       "           category & sub-category      category        subcategory  \\\n",
+       "990             film & video/drama  film & video              drama   \n",
+       "991                     music/rock         music               rock   \n",
+       "992             film & video/drama  film & video              drama   \n",
+       "993  photography/photography books   photography  photography books   \n",
+       "994        publishing/translations    publishing       translations   \n",
+       "995               food/food trucks          food        food trucks   \n",
+       "996                  theater/plays       theater              plays   \n",
+       "997                  theater/plays       theater              plays   \n",
+       "998               music/indie rock         music         indie rock   \n",
+       "999               food/food trucks          food        food trucks   \n",
+       "\n",
+       "    category_id subcategory_id  \n",
+       "990        cat5        subcat7  \n",
+       "991        cat2        subcat2  \n",
+       "992        cat5        subcat7  \n",
+       "993        cat8       subcat15  \n",
+       "994        cat6       subcat19  \n",
+       "995        cat1        subcat1  \n",
+       "996        cat4        subcat4  \n",
+       "997        cat4        subcat4  \n",
+       "998        cat2        subcat8  \n",
+       "999        cat1        subcat1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1918,30 +1930,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "cf_id               int64\n",
-       "contact_id          int64\n",
-       "company_name       object\n",
-       "description        object\n",
-       "goal              float64\n",
-       "pledged           float64\n",
-       "outcome            object\n",
-       "backers_count       int64\n",
-       "country            object\n",
-       "currency           object\n",
-       "launched_date      object\n",
-       "end_date           object\n",
-       "category_id        object\n",
-       "subcategory_id      int64\n",
+       "cf_id                      int64\n",
+       "contact_id                 int64\n",
+       "company_name              object\n",
+       "description               object\n",
+       "goal                     float64\n",
+       "pledged                  float64\n",
+       "outcome                   object\n",
+       "backers_count              int64\n",
+       "country                   object\n",
+       "currency                  object\n",
+       "launched_date     datetime64[ns]\n",
+       "end_date          datetime64[ns]\n",
+       "category_id               object\n",
+       "subcategory_id            object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
